fixed text overlapping bug

--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ ul {
   list-style: none;
 }
 .panel {
-  background-color: whitesmoke;
+  background-color: white;
   border-radius: 10px;
   padding: 15px 25px;
   width: 100%;
@@ -53,7 +53,7 @@ ul {
   font-weight: 600;
   letter-spacing: 1px;
   font-size: 12px;
-  line-height: 1.5px;
+  line-height: 1.5;
   padding: 15px 0;
   border-top: 1px solid #a2caee;
 }
